--- a/force-app/main/default/aura/AccountList/AccountList.cmp
+++ b/force-app/main/default/aura/AccountList/AccountList.cmp
@@ -9,4 +9,7 @@
     </aura:iteration>
     </ul>
 
+    <aura:registerEvent name="accountsLoaded" type="c:AccountsLoaded"/>
+    <ltng:require styles="/resource/leaflet/leaflet.css" scripts="/resource/leaflet/leaflet.js" afterScriptsLoaded="{!c.doInit}" />
+
 </aura:component>
